new branch changes commit

--- a/design3.html
+++ b/design3.html
@@ -22,7 +22,7 @@
                             <img src="Image.jpg" width="100%" height="300px" />
                         </div>
                         <div class="col-6">
-                            <h3>Ideas and UI Components in Your Inbox Changes</h3>
+                            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, laudantium!</h3>
                             <p>
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias deleniti, vel obcaecati
                                 maiores maxime repudiandae.
